<resources>
    <string name="app_name">Swoosh</string>
    <string name="welcome_title">GO ALL IN</string>
    <string name="welcome_subtitle">ON GOING ALL OUT</string>
    <string name="welcome_tagline">Find a team in your city and dominate the league</string>
    <string name="get_started">GET STARTED</string>
    <string name="welcome_background_pic_description">A green basketball court with people playing basketball.</string>
    <string name="logo_description">The app logo Swoosh</string>
    <string name="league_background">A basketball court with green and purple</string>
    <string name="league_title">Desired League:</string>
    <string name="league_mens">Mens</string>
    <string name="league_womens">Womens</string>
    <string name="league_coed">Co-ed</string>
    <string name="next">NEXT</string>
    <string name="background_image">Background Image</string>
    <string name="i_am_a">I am a:</string>
    <string name="beginner">BEGINNER</string>
    <string name="baller">BALLER</string>
    <string name="finish">FINISH</string>
    <string name="search_league">Looking for a co-ed beginner league near you...</string>
</resources>
